--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dependencies = [
     "pandas (>=2.3.3,<3.0.0)",
     "matplotlib (>=3.10.6,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "kaggle (>=1.7.4.5,<2.0.0.0)"
+    "kaggle (>=1.7.4.5,<2.0.0.0)",
+    "jupyterlab (>=4.4.9,<5.0.0)",
+    "polars (>=1.34.0,<2.0.0)",
+    "plotly (>=6.3.1,<7.0.0)",
+    "pyarrow (>=21.0.0,<22.0.0)"
 ]
 
 
