--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ dependencies = [
     "opencv-python (>=4.12.0.88,<5.0.0.0)",
     "scikit-image (>=0.25.2,<0.26.0)",
     "scikit-learn (>=1.7.2,<2.0.0)",
-    "segmentation-models-pytorch (>=0.5.0,<0.6.0)"
+    "segmentation-models-pytorch (>=0.5.0,<0.6.0)",
+    "pytest (>=8.4.2,<9.0.0)",
+    "fastapi[standard] (>=0.119.0,<0.120.0)",
+    "uvicorn[standard] (>=0.37.0,<0.38.0)",
 ]
 
 
